[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/SkinMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/VirusPreview.tscn" type="PackedScene" id=7]

[node name="SkinsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.458824, 0.454902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 150.0
margin_bottom = 1048.0
rect_min_size = Vector2( 150, 0 )
custom_constants/separation = 16

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 988.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="SkinList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ScrollContainer"]

[node name="BackButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 1004.0
margin_right = 150.0
margin_bottom = 1048.0
text = "Back"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 182.0
margin_right = 1706.0
margin_bottom = 1048.0
size_flags_horizontal = 3

[node name="VirusPreview" parent="HBoxContainer/CenterContainer" instance=ExtResource( 7 )]
margin_left = 506.0
margin_top = 268.0
margin_right = 1018.0
margin_bottom = 780.0
rect_min_size = Vector2( 512, 512 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
margin_left = 1738.0
margin_right = 1888.0
margin_bottom = 1048.0
rect_min_size = Vector2( 150, 0 )
scroll_horizontal_enabled = false

[node name="AccessoireList" type="VBoxContainer" parent="HBoxContainer/ScrollContainer"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
